# tfhe_neural

./: A_Explore_and_train_in_Python.ipynb  Cargo.toml  README.md
data/: X_test.csv  X_train.csv  coefs.csv  intercepts.csv  y_test.csv  y_train.csv
keys/: README.md
