[package]
name = "tfhe_neural"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
concrete = "0.1.0"
#smartcore = { version = "0.1.0", features=["nalgebra-bindings"]}
#nalgebra = { version="0.22.0", features = ["serde-serialize"]}
ndarray = "*"
ndarray-csv = "*"
csv = "*"jovyan@drakir-lab-7f458fc486-brt6t:~/shared/rbdev/tfhe_neural$ 
